--- a/components/S2IBuildStrat/CustomBuilderImage/ImageStreamCustomBuilderImage.yaml
+++ b/components/S2IBuildStrat/CustomBuilderImage/ImageStreamCustomBuilderImage.yaml
@@ -1,13 +1,13 @@
 apiVersion: image.openshift.io/v1
 kind: ImageStream
 metadata:
-  name: login-app
+  name: login-app-custom-builder-image
 spec:
   tags:
     - name: latest
       from:
         kind: DockerImage
-        name: login-app:latest
+        name: login-app-custom-builder-image:latest
       importPolicy:
         scheduled: true
       referencePolicy:
