--- a/components/DockerBuildStrat/ImageStreamDockerBuild.yaml
+++ b/components/DockerBuildStrat/ImageStreamDockerBuild.yaml
@@ -1,7 +1,7 @@
 apiVersion: image.openshift.io/v1
 kind: ImageStream
 metadata:
-  name: login-app-docker-build-image
+  name: login-app-docker-strat
 spec:
   tags:
     - name: latest
