--- a/base/Service.yaml
+++ b/base/Service.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: login-app-service
+  namespace: loginapp-dev
 spec:
   selector:
     app: login-app
