--- a/base/kustomization.yaml
+++ b/base/kustomization.yaml
@@ -1,7 +1,27 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+namespace: loginapp-dev
+
 resources:
   - ./Service.yaml
   - ./Route.yaml
   - ./Deployment.yaml
+
+configMapGenerator:
+- name: login-app-config-map
+  envs:
+  - loginapp.properties
+  options:
+    labels:
+      app: login-app
+
+
+secretGenerator:
+- name: login-app-secret
+  envs:
+  - loginapp.secret
+  type: Opaque
+  options:
+    labels:
+      app: login-app
