--- a/components/DockerBuildStrat/BuildConfigDockerStrat.yaml
+++ b/components/DockerBuildStrat/BuildConfigDockerStrat.yaml
@@ -2,6 +2,7 @@ apiVersion: build.openshift.io/v1
 kind: BuildConfig
 metadata:
   name: login-app-build-docker
+  namespace: loginapp-dev
 spec:
   output:
     to:
