--- a/components/DockerBuildStrat/ImageStreamDockerBuild.yaml
+++ b/components/DockerBuildStrat/ImageStreamDockerBuild.yaml
@@ -2,6 +2,7 @@ apiVersion: image.openshift.io/v1
 kind: ImageStream
 metadata:
   name: login-app-docker-strat
+  namespace: loginapp-dev
 spec:
   tags:
     - name: latest
