--- a/components/S2IBuildStrat/ImageStreamS2I.yaml
+++ b/components/S2IBuildStrat/ImageStreamS2I.yaml
@@ -2,6 +2,7 @@ apiVersion: image.openshift.io/v1
 kind: ImageStream
 metadata:
   name: login-app-s2i-strat
+  namespace: loginapp-dev
 spec:
   tags:
     - name: latest
