--- a/overlays/Custom/kustomization.yaml
+++ b/overlays/Custom/kustomization.yaml
@@ -1,11 +1,13 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+namespace: loginapp-dev
+
 generatorOptions:
   disableNameSuffixHash: true
 
 resources:
-- ../dev
+- ../../base
 
 patches:
 - path: ./patches/image_patch.yaml
