--- a/components/CustomBuildStrat/BuildConfigCustomStrat.yaml
+++ b/components/CustomBuildStrat/BuildConfigCustomStrat.yaml
@@ -6,7 +6,9 @@ metadata:
 spec:
   source:
     git:
-      uri: 'https://github.com/walidelbiir/redhat-loginapp.git'
+      uri: git@github.com:walidelbiir/redhat-loginapp.git
+    sourceSecret:
+      name: repo-at-github
   serviceAccount: builder
   strategy:
     type: Custom
