--- a/components/Pipelines/Pipeline-buildpush/kustomization.yaml
+++ b/components/Pipelines/Pipeline-buildpush/kustomization.yaml
@@ -1,14 +1,10 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-namespace: loginapp-custom
-
 generatorOptions:
   disableNameSuffixHash: true
-
+  
 resources:
-- ../../base
-
-patches:
-- path: ./patches/image_patch.yaml
-
+  - pipeline.yaml
+  - pipelinerun.yaml
+  - dockerconfigsecret.yaml
