changed name to match

--- a/base/config-repo-secret.yaml
+++ b/base/config-repo-secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: repo-at-github
+  name: config-repo-at-github
   annotations:
     tekton.dev/git-0: github.com
 type: kubernetes.io/ssh-auth
