--- a/components/S2IBuildStrat/BuildConfigS2I.yaml
+++ b/components/S2IBuildStrat/BuildConfigS2I.yaml
@@ -14,7 +14,7 @@ spec:
     sourceStrategy:
       from:
         kind: ImageStreamTag
-        name: "eap-xp4-openjdk11-openshift-rhel8"
+        name: "eap-xp4-openjdk11-openshift-rhel8:4.0-68.1721172741"
         namespace: loginapp-dev
     type: Source
   serviceAccount: builder
