--- a/components/S2IBuildStrat/BuildConfigS2I.yaml
+++ b/components/S2IBuildStrat/BuildConfigS2I.yaml
@@ -13,9 +13,8 @@ spec:
   strategy:
     sourceStrategy:
       from:
-        kind: ImageStreamTag
-        name: "eap-xp4-openjdk11-openshift-rhel8:4.0-68.1721172741"
-        namespace: loginapp-dev
+        kind: DockerImage
+        name: "image-registry.openshift-image-registry.svc:5000/loginapp-dev/eap-xp4-openjdk11-openshift-rhel8:latest"
     type: Source
   serviceAccount: builder
   output:
