--- a/overlays/S2I/kustomization.yaml
+++ b/overlays/S2I/kustomization.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-namespace: loginapp-dev
+namespace: loginapp-s2i
 
 generatorOptions:
   disableNameSuffixHash: true
