--- a/components/CustomBuildStrat/BuildConfigCustomStrat.yaml
+++ b/components/CustomBuildStrat/BuildConfigCustomStrat.yaml
@@ -31,7 +31,7 @@ spec:
           valueFrom:
             secretKeyRef:
               name: redhat-login-credentials
-              key: SERVICE_ACCOUNT
+              key: SERVICEACCOUNT
   output:
     to:
       kind: ImageStreamTag
