--- a/components/CustomBuildStrat/BuildConfigCustomStrat.yaml
+++ b/components/CustomBuildStrat/BuildConfigCustomStrat.yaml
@@ -33,6 +33,8 @@ spec:
             secretKeyRef:
               name: redhat-login-credentials
               key: SERVICEACCOUNT
+        - name : BUILDER_SECRET_MOUNT_PATH
+          value : /tmp/builder-secret
   output:
     to:
       kind: ImageStreamTag
