--- a/base/Database/mysql-pvc.yaml
+++ b/base/Database/mysql-pvc.yaml
@@ -8,5 +8,5 @@ spec:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 1Gi
-  storageClassName: crc-csi-hostpath-provisioner
+      storage: 100Gi
+  storageClassName: mysql-storage
