--- a/base/Database/mysql-pvc.yaml
+++ b/base/Database/mysql-pvc.yaml
@@ -5,8 +5,8 @@ metadata:
   namespace: loginapp-dev
 spec:
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
   resources:
     requests:
-      storage: 100Gi
+      storage: 1Gi
   storageClassName: mysql-storage
