--- a/pv.yaml
+++ b/pv.yaml
@@ -7,7 +7,7 @@ spec:
     storage: 10Gi
   nfs:
     server: 192.168.195.11
-    path: /mnt/data/nfs/mysql
+    path: /mnt/data/nfs/
   accessModes:
     - ReadWriteMany
   persistentVolumeReclaimPolicy: Retain
