--- a/storageClass.yaml
+++ b/storageClass.yaml
@@ -5,6 +5,6 @@ metadata:
 provisioner: kubernetes.io/nfs
 parameters:
   server: 192.168.195.11
-  path: "/mnt/data/nfs/mysql"
+  path: "/mnt/data/nfs/"
 reclaimPolicy: Delete
 volumeBindingMode: Immediate
