--- a/base/Database/pv.yaml
+++ b/base/Database/pv.yaml
@@ -1,10 +1,10 @@
 kind: PersistentVolume
 apiVersion: v1
 metadata:
-  name: mysql-pv
+  name: mysql-docker-pv
 spec:
   capacity:
-    storage: 10Gi
+    storage: 4Gi
   nfs:
     server: 192.168.195.11
     path: /mnt/data/nfs/
@@ -12,3 +12,4 @@ spec:
     - ReadWriteMany
   persistentVolumeReclaimPolicy: Retain
   volumeMode: Filesystem
+  storageClassName: mysql-docker
