--- a/overlays/dev/kustomization.yaml
+++ b/overlays/dev/kustomization.yaml
@@ -1,5 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: loginapp-dev
 
 generatorOptions:
   disableNameSuffixHash: true
@@ -8,5 +9,5 @@ namespace: loginapp-dev
 
 resources:
 - ../../base
-- namespace.yaml
+
 
