--- a/base/Database/pv.yaml
+++ b/base/Database/pv.yaml
@@ -7,7 +7,7 @@ spec:
     storage: 4Gi
   nfs:
     server: 192.168.195.11
-    path: /mnt/data/nfs/
+    path: /mnt/data/nfs/mysql-docker-pv
   accessModes:
     - ReadWriteMany
   persistentVolumeReclaimPolicy: Retain
