--- a/overlays/CustomS2I/kustomization.yaml
+++ b/overlays/CustomS2I/kustomization.yaml
@@ -12,7 +12,7 @@ resources:
 - ./pvc.yaml
 
 excludes:
-  - ../../base/database/pv.yaml
+  - ../../base/database/mysql-pv.yaml
   - ../../base/database/mysql-pvc.yaml
 patches:
 - path: ./patches/image_patch.yaml
