--- a/overlays/CustomS2I/kustomization.yaml
+++ b/overlays/CustomS2I/kustomization.yaml
@@ -10,10 +10,9 @@ resources:
 - ../../base
 - ./pv.yaml
 - ./pvc.yaml
+- "!../../base/database/mysql-pv.yaml"
+- "!../../base/database/mysql-pvc.yaml"
 
-excludes:
-  - ../../base/database/mysql-pv.yaml
-  - ../../base/database/mysql-pvc.yaml
 patches:
 - path: ./patches/image_patch.yaml
 
