--- a/overlays/CustomS2I/kustomization.yaml
+++ b/overlays/CustomS2I/kustomization.yaml
@@ -8,12 +8,10 @@ generatorOptions:
 
 resources:
 - ../../base
-- ./pv.yaml
-- ./pvc.yaml
-- "!../../base/database/mysql-pv.yaml"
-- "!../../base/database/mysql-pvc.yaml"
 
 patches:
 - path: ./patches/image_patch.yaml
+- path: ./patches/mysql_pvc_patch.yaml
+
 
 
