--- a/overlays/S2I/kustomization.yaml
+++ b/overlays/S2I/kustomization.yaml
@@ -8,8 +8,11 @@ generatorOptions:
 
 resources:
 - ../../base
+- ./pv.yaml
+- ./pvc.yaml
 
 patches:
 - path: ./patches/image_patch.yaml
+- path: ./patches/mysql_pvc_patch.yaml
 
 
