updated pvc and created pv

--- a/components/Pipelines/Pipeline-buildpush/pipelinerun.yaml
+++ b/components/Pipelines/Pipeline-buildpush/pipelinerun.yaml
@@ -23,9 +23,4 @@ spec:
           resources:
             requests:
               storage: 1Gi
-    #- name: ssh-creds
-    #  secret:
-    #    secretName: repo-at-github
-    #- name: dockerconfig
-    #  secret:
-    #    secretName: dockerconfig-secret
+          storageClassName: buildpush-pipeline-pv
