--- a/components/Pipelines/Pipeline-buildpush/pipeline.yaml
+++ b/components/Pipelines/Pipeline-buildpush/pipeline.yaml
@@ -24,6 +24,7 @@ spec:
     - name: git-clone
       taskRef:
         name: git-clone
+        kind: ClusterTask
       params:
         - name: url
           value: $(params.URL)
@@ -34,6 +35,7 @@ spec:
     - name: build-and-push
       taskRef:
         name: buildah
+        kind: ClusterTask
       runAfter: ["git-clone"]
       params:
         - name: TLSVERIFY
