--- a/app-repo-secret.yaml
+++ b/app-repo-secret.yaml
@@ -3,7 +3,7 @@ kind: Secret
 metadata:
   name: repo-at-github
   annotations:
-    tekton.dev/git-0: github.com
+    tekton.dev/git-0: github.com/walidelbiir/redhat-loginapp
 type: kubernetes.io/ssh-auth
 stringData:
   ssh-privatekey: |
