testing custom sa

--- a/components/Pipelines/Pipeline-openshift/pipelinerun.yaml
+++ b/components/Pipelines/Pipeline-openshift/pipelinerun.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   pipelineRef:
     name: build-openshift-pipeline
-  serviceAccountName: pipeline
+  serviceAccountName: custom-pipeline
   params:
     - name: SCRIPT
       value: |
