--- a/components/Pipelines/Pipeline-openshift/pipelinerun.yaml
+++ b/components/Pipelines/Pipeline-openshift/pipelinerun.yaml
@@ -13,7 +13,7 @@ spec:
         set -e
 
         chmod +x build-script.sh
-        build-script.sh
+        ./build-script.sh
         
     - name: URL
       value: git@github.com:walidelbiir/loginapp-config.git
