--- a/overlays/Argo-cd/pvc.yaml
+++ b/overlays/Argo-cd/pvc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: mysql-s2i-pvc
+  name: mysql-argocd-pv
   namespace: loginapp-dev
 spec:
   accessModes:
@@ -9,4 +9,4 @@ spec:
   resources:
     requests:
       storage: 1Gi
-  storageClassName: mysql-s2i
+  storageClassName: mysql-argocd-pv
