--- a/overlays/Argo-cd/pvc.yaml
+++ b/overlays/Argo-cd/pvc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: mysql-argocd-pv
+  name: mysql-argocd-pvc
   namespace: loginapp-dev
 spec:
   accessModes:
