--- a/components/ArgoCd/roleBinding.yaml
+++ b/components/ArgoCd/roleBinding.yaml
@@ -4,8 +4,8 @@ metadata:
   name: argocd-cluster-admin
 subjects:
 - kind: ServiceAccount
-  name: argocd-application-controller
-  namespace: argocd
+  name: openshift-gitops-argocd-application-controller
+  namespace: openshift-gitops
 roleRef:
   kind: ClusterRole
   name: cluster-admin
