--- a/components/CustomBuildStrat/BuildConfigCustomStrat.yaml
+++ b/components/CustomBuildStrat/BuildConfigCustomStrat.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   source:
     git:
-      uri: https://github.com/walidelbiir/redhat-loginapp.git
+      uri: git@github.com:walidelbiir/loginapp-config.git
       type: Git
     sourceSecret:
       name: repo-at-github
