--- a/components/CustomBuildStrat/kustomization.yaml
+++ b/components/CustomBuildStrat/kustomization.yaml
@@ -11,13 +11,11 @@ resources:
   - ImageStreamCustom.yaml
   - ./CustomImageBuilder/ImageStreamCustom.yaml
   - ./CustomImageBuilder/BuildConfigCustomImage.yaml
+  - ./github-account-ssh.yaml
 
 secretGenerator:
 - name: redhat-login-credentials
   envs:
   - redhat-login.credentials
   type: Opaque
-- name: github-account-ssh-key
-  envs :
-  - ssh-key
-  type: Opaque
+
