--- a/overlays/Custom/kustomization.yaml
+++ b/overlays/Custom/kustomization.yaml
@@ -8,7 +8,10 @@ generatorOptions:
 
 resources:
 - ../../base
+- ./pv.yaml
+- ./pvc.yaml
 
 patches:
 - path: ./patches/image_patch.yaml
+- path: ./patches/mysql_pvc_patch.yaml
 
