--- a/components/ArgoCd/app.yaml
+++ b/components/ArgoCd/app.yaml
@@ -1,17 +1,17 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: loginapp-dev
+  name: loginapp
   namespace: openshift-gitops
 spec:
   project: default
   source:
     repoURL: https://github.com/walidelbiir/loginapp-config.git
     targetRevision: main
-    path: overlays/dev
+    path: ./overlays/argoCD
   destination:
     server: https://kubernetes.default.svc
-    namespace: loginapp-dev
+    namespace: loginapp-argocd
   syncPolicy:
     automated:
       prune: true
