--- a/components/DockerBuildStrat/BuildConfigDockerStrat.yaml
+++ b/components/DockerBuildStrat/BuildConfigDockerStrat.yaml
@@ -7,7 +7,7 @@ spec:
   output:
     to:
       kind: ImageStreamTag
-      name: login-app-docker-strat:latest
+      name: login-app-docker-strat
   source:
     type: Git
     git:
